--- a/src/app/movie/movie.component.html
+++ b/src/app/movie/movie.component.html
@@ -1,1 +1,12 @@
-<p>movie works!</p>
+<app-header />
+<div class="movie-container">
+  <div class="top">
+    <div class="left">
+      <div class="name"></div>
+      <div class="rating"></div>
+      <div class="cover"></div>
+    </div>
+    <div class="right"></div>
+  </div>
+  <div class="bottom"></div>
+</div>
